--- a/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.html
+++ b/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.html
@@ -1,37 +1,28 @@
 @if (isVisible) {
-<nav class="navbar">
-  <ul class="nav-links">
-    <li>
-      <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-        <mat-icon>home</mat-icon>
-        <span>Início</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/compras" routerLinkActive="active">
-        <mat-icon>shopping_bag</mat-icon>
-        <span>Compras</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/lojas" routerLinkActive="active">
-        <mat-icon>store</mat-icon>
-        <span>Lojas Próximas</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/notificacoes" routerLinkActive="active">
-        <mat-icon>notifications</mat-icon>
-        <span>Notificações</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/my-account" routerLinkActive="active">
-        <mat-icon>person</mat-icon>
-        <span>Minha Conta</span>
-      </a>
-    </li>
-  </ul>
-</nav>
+  <nav class="mobile-tab-bar">
+    <button (click)="navegar('/home')" [class.active]="router.url === '/home'">
+      <mat-icon>home</mat-icon>
+      <span>Home</span>
+    </button>
 
+    <button (click)="navegar('/compras')" [class.active]="router.url === '/compras'">
+      <mat-icon>shopping_cart</mat-icon>
+      <span>Compras</span>
+    </button>
+
+    <button (click)="navegar('/lojas')" [class.active]="router.url === '/lojas'">
+      <mat-icon>store</mat-icon>
+      <span>Lojas</span>
+    </button>
+
+    <button (click)="navegar('/notificacoes')" [class.active]="router.url === '/notificacoes'">
+      <mat-icon>notifications</mat-icon>
+      <span>Notificações</span>
+    </button>
+
+    <button (click)="navegar('/my-account')" [class.active]="router.url === '/my-account'">
+      <mat-icon>menu</mat-icon>
+      <span>Menu</span>
+    </button>
+  </nav>
 }
