--- a/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.scss
@@ -1,41 +1,35 @@
-.navbar {
+.mobile-tab-bar {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #fff;
+  background-color: #0a1630;
+  display: flex;
+  justify-content: space-around;
   border-top: 1px solid #ddd;
-  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.05);
   z-index: 1000;
 
-  .nav-links {
-    display: flex;
-    justify-content: space-around;
+  button {
+    background: none;
+    border: none;
+    flex-grow: 1;
+    text-align: center;
     padding: 8px 0;
-    margin: 0;
-    list-style: none;
+    color: #ddd;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
 
-    li {
-      a {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-decoration: none;
-        color: #666;
-        font-size: 11px;
+    mat-icon {
+      font-size: 22px;
+      margin-bottom: 2px;
+      font-weight: 600;
+    }
 
-        mat-icon {
-          font-size: 24px;
-          color: #666;
-        }
-
-        &.active {
-          color: #1976d2; // cor do texto ativo
-
-          mat-icon {
-            color: #1976d2; // cor do ícone ativo
-          }
-        }
-      }
+    &.active {
+      color: #FF9933;
+      font-weight: 550;
     }
   }
 }
