--- a/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
+++ b/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
@@ -4,6 +4,7 @@
     background: #F2F2F2;
     overflow: auto;
     position: fixed;
+    padding-top: 60px;
 
     .container {
         display: flex;
