--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 0 20px;
     background-color: #0a1630;
-    color: #ddd;
+    color: #DDD;
     position: fixed;
     top: 0;
     width: 100%;
@@ -165,8 +165,9 @@
     }
 }
 
-.ng-usuario-logado {
-    color: #fff;
+.ng-isAdmin {
+    background-color: #F2F2F2;
+    color: #333;
 }
 
 .menu {
@@ -212,6 +213,7 @@
 
             p {
                 font-size: 16px;
+                color: #FFF;
             }
         }
 
