--- a/src/app/features/pages/profileEdition/profileEdition.component.html
+++ b/src/app/features/pages/profileEdition/profileEdition.component.html
@@ -1,4 +1,6 @@
 <app-page-container>
+    <app-header></app-header>
+    <app-mobile-navbar></app-mobile-navbar>
     <div class="ng-main">
         <app-form-ProfileEdition></app-form-ProfileEdition>
     </div>
